# RAGCore

./: .gitignore  README.md  design.md  diagram.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  phase.md  tsconfig.json
backend/: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/api/: deps.py  main.py  schemas.py
backend/api/routes/: admin.py  auth.py  chat.py  confluence.py  discover.py  documents.py  evals.py  github.py  health.py  jira.py  knowledge_bases.py  metrics.py  projects.py  search.py  slack.py  tools.py  (+2 more)
backend/chat/: citations.py  prompts.py
backend/core/: config.py  exceptions.py  ids.py  logging.py  metrics.py  security.py
backend/database/: base.py  session.py
backend/embeddings/: base.py  cache.py  factory.py  fake.py  openai_compat.py  voyage.py
backend/ingestion/: pipeline.py  queue.py
backend/knowledgebase/: source_metadata.py
backend/llm/: anthropic.py  base.py  factory.py  fake.py  openai_compat.py
backend/middleware/: observability.py  rate_limit.py
backend/models/: __init__.py  chat.py  connector.py  knowledge.py  project.py  user.py
backend/repositories/: __init__.py  audit.py  chunks.py  code_search.py  connectors.py  conversations.py  knowledge.py  projects.py  users.py
backend/retrieval/: context.py  crag.py  expansion.py  fusion.py  pipeline.py  recency.py  rerankers.py  signals.py
backend/scripts/: compare_retrieval_modes.py  generate_db_golden.py  run_evals.py  run_mcp_server.py  run_slack_socket_mode.py
backend/services/: auth_service.py  cache.py  chat_memory.py  chat_service.py  chat_sessions.py  confluence_service.py  conversational_retriever.py  discover_service.py  document_service.py  evidence_contract.py  evidence_executor.py  evidence_orchestrator.py  evidence_planner.py  evidence_runtime.py  evidence_tools.py  github_client.py  github_index.py  jira_service.py  knowledge_workflows.py  question_rewriter.py  response_generator.py  slack_client.py  slack_normalizer.py  slack_service.py  web_search_service.py
backend/tests/: conftest.py
backend/utils/: pii.py
(+142 files in other folders)
