[project]
name = "kimbal-backend"
version = "0.1.0"
description = "Kimbal Knowledge Hub — enterprise RAG backend"
requires-python = ">=3.13"
dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",     # file uploads
    "sse-starlette>=2.1",           # streaming chat responses
    # data
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3.6",              # SQLAlchemy vector type
    "redis>=5.2",
    # domain
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.6",
    "httpx>=0.28",                  # provider HTTP calls
    "tiktoken>=0.8",                # token counting for chunking/budgets
    # auth
    "pyjwt>=2.10",
    "argon2-cffi>=23.1",            # password hashing
    # observability
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    # extraction (loaded lazily per file type)
    "pypdf>=5.1",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "markdown-it-py>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-redis",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "S", "SIM", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "auth", "chat", "documents", "knowledgebase", "retrieval", "embeddings", "ingestion", "llm", "database", "models", "repositories", "services", "middleware", "core", "config", "utils"]
